syntax = "proto3";

package federation;

import "grpc/federation/federation.proto";
import "post.proto";

option go_package = "example/federation;federation";

option (grpc.federation.file)= {
  import: [
    "user.proto",
    "unknown.proto"
  ]
};

service FederationService {
  option (grpc.federation.service) = {};
  rpc Get(GetRequest) returns (GetResponse) {};
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  option (grpc.federation.message) = {
    def {
      name: "post"
      message {
        name: "Post"
        args { name: "id", by: "$.id" }
      }
    }
  };
  Post post = 1 [(grpc.federation.field).by = "post"];
}

message Post {
  option (grpc.federation.message) = {
    def {
      name: "res"
      call {
        method: "post.PostService/GetPost"
        request { field: "id", by: "$.id" }
      }
    }
    def { name: "post", by: "res.post", autobind: true  }
  };
  string id = 1;
  string title = 2;
  string content = 3;
  string user_id = 4;
}
